--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>The Best Stop Loss Strategy (But flip it)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>His COLDEST Moment 🥶</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Spirituality - Journey to the Source of Consciousness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -574,7 +574,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US POKEMON CHAOS MODE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1421,7 +1421,7 @@
                     <div class="video-info">
                         <h3>If trading is more accessible than ever, why do most still fail?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2338,7 +2338,7 @@
                     <div class="video-info">
                         <h3>The only way to protect your future is by taxing the billionaires more</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 20, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>The Best Stop Loss Strategy (But flip it)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5611,7 +5611,7 @@
                         <div class="video-info">
                             <h3>If trading is more accessible than ever, why do most still fail?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6132,7 +6132,7 @@
                         <div class="video-info">
                             <h3>The only way to protect your future is by taxing the billionaires more</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 20, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Spirituality - Journey to the Source of Consciousness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>His COLDEST Moment 🥶</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9605,7 +9605,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US POKEMON CHAOS MODE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
