--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Creating Walking Temples | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -904,7 +904,7 @@
                     <div class="video-info">
                         <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5391,7 +5391,7 @@
                         <div class="video-info">
                             <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Creating Walking Temples | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
