--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Right Understanding</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The problem with monetary targets in trading 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>12 YEARS OF SIDEMEN 🥳</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>What's The Best Month For Stocks?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -893,7 +893,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Tips: Backtesting Secrets Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The problem with monetary targets in trading 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5160,7 +5160,7 @@
                         <div class="video-info">
                             <h3>What's The Best Month For Stocks?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5380,7 +5380,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Tips: Backtesting Secrets Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Right Understanding</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>12 YEARS OF SIDEMEN 🥳</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
