--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>Stop Believing This Myth… Markets Are Rigged to the Long Side 📈</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 21, 2025</div>
                     </div>
                 </a>
             </div>
@@ -6110,7 +6110,7 @@
                         <div class="video-info">
                             <h3>Stop Believing This Myth… Markets Are Rigged to the Long Side 📈</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 21, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Powerful Message for Volunteers on Diwali</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
